feat: adicionar biblioteca nodemon para reiniciar servidor automaticamente no desenvolvimento

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,7 @@ services:
       - /usr/src/app/node_modules
     expose:
       - "3000"
+    command: npm run dev
     networks:
       - app-network
 
