--- a/default.conf
+++ b/default.conf
@@ -8,8 +8,11 @@ server {
     root /var/www/html/public;
     index index.php index.html;
 
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location ~ \.php$ {
-        try_files $uri /index.php?$query_string;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php-app:9000;
         fastcgi_index index.php;
