--- a/php-app/.env.example
+++ b/php-app/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_KEY=base64:6v33RoKVfYeZyh8VGJVZ2v9uUbZCKNdPjYTrqbcWJ14=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=techchallenge
+DB_USERNAME=root
+DB_PASSWORD=techchallenge
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+NODEJS_URL=http://nodejs-app:3000/check-string
