fix: adicionar depends_on no servico nginx para aguardar as aplicacoes subirem

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,9 @@ services:
     volumes:
       - ./php-app:/var/www/html
       - ./default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php-app
+      - nodejs-app
     networks:
       - app-network
 
